@@ -63,6 +63,8 @@ pypet 0.1b.3
 
 *   `tr`, `cr`, `current_run`, `param`, `dparam` are no longer supported as a shortcuts
 
+*   __getitem__ is equivalent to __getattr__
+
 pypet 0.1b.2
 
 *   DefaultReplacementError is now called PresettingError
